# digital-rf

./: .gitignore  README.md  drf.py  drf.sh  mirror.sh  pyproject.toml
conf/: render.js  tableui.json
data/: table
data/table-2026-05-27/: blocks.attribute_counts.csv  samples.attribute_counts.csv
metadata/drf/: catalog.csv
misc/: drf_plot.py  dump_h5.py
table/: drf
